<resources>
    <string name="app_name">eWeigh</string>

    <string name="no_connection">No Connection</string>
    <string name="no_info_found">No Info Found</string>
    <string name="live_weight">Live Weight (kg)</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="get_live_weight">Get Live Weight</string>
    <string name="about">About</string>

    <string name="location_permission">The app requires access to your current location to submit data. Please allow this permission to continue</string>
    <string name="zero">0</string>
    <string name="submit">Submit</string>
    <string name="heart_girth_cm">Heart Girth (cm)</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="county">County</string>
    <string name="id_number">ID Number</string>
    <string name="log_in">Login</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_mobile_no">Email/Mobile No.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>

    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="view_submissions">View Submissions</string>
    <string name="my_cattle">My Cattle</string>
    <string name="no_submissions_yet">No submissions added yet</string>
    <string name="no_cattle_added_yet">No cattle added yet</string>
    <string name="full_name">Full Name</string>
    <string name="live_weight_label">Live Weight</string>
    <string name="get_feed_ration">Get Feed Ration</string>
    <string name="delete">Delete</string>
    <string name="tag">Tag</string>
    <string name="gender">Gender</string>
    <string name="breed">Breed</string>
    <string name="added_on">Added</string>
    <string name="dosage_intro">Select the disease you wish to treat and the chemical agent used to treat it:</string>
    <string name="feeds_intro">Click the button below to get the diet for this cattle:</string>
    <string name="dosage_warning">NOTE: This is intended for general dosing information only. Always read Product Safety Data Sheets before use.</string>
    <string name="select_gender">Select gender</string>
    <string name="select_breed">Select breed</string>
    <string name="required">Required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mating_intro">This guide helps you to determine whether the cow is ready for mating based on their live weight:</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
</resources>
