<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/TabTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/CardTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dosage_intro"
            style="@style/IntroTextStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FormInputStyle">

            <EditText
                android:id="@+id/edit_live_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/live_weight"
                android:imeActionLabel="@string/live_weight"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:enabled="false"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/FormSpinnerStyle">

            <Spinner
                android:id="@+id/spinner_diseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/FormSpinnerStyle">

            <Spinner
                android:id="@+id/spinner_agents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get Dosage"/>

        <TextView
            android:id="@+id/txt_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/dosage_warning"
            android:textColor="@color/red"
            android:textStyle="italic"
            android:textSize="14sp"/>

    </LinearLayout>

</ScrollView>